# TUCAN_ML

./: .gitignore
tucan/: io.py  molecular_calculations.py  serialization.py
tucan_ML/: io.py  pyproject.toml
tucan_ML/tucan_ML/: __init__.py  io.py
tucan_ML/tucan_ML/GNN/: conversion.py
